--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,7 +28,7 @@ h3, h4, h5, h6 {
   font-size: 2.0rem;
 }
 
-p,a {
+p,a,span {
   font-size: 1.6rem;
 }
 
@@ -48,7 +48,7 @@ p,a {
     font-size: 1.4rem;
   }
 
-  p,a {
+  p,a,span {
     font-size: 1.2rem;
   }
 }
@@ -66,7 +66,7 @@ p,a {
     font-size: 2.5rem;
   }
 
-  p,a {
+  p,a,span {
     font-size: 2.0rem;
   }
 }
